fixing the scroll bar shadow issue in dark mode

--- a/styles/firstPage.css
+++ b/styles/firstPage.css
@@ -35,19 +35,23 @@ html {
 /* width */
 ::-webkit-scrollbar {
   width: 10px;
+
 }
 ::-webkit-scrollbar:hover {
   width: 10px;
+  
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px rgb(255, 255, 255);
+  /* box-shadow: inset 0 0 5px rgb(255, 255, 255); */
   /* border-radius: 15px; */
+  border-radius: 20px;
 }
 
 /* Handle */
 ::-webkit-scrollbar-thumb {
+  border-radius: 20px;
   /* background-color: #abe9cd; */
   background: -webkit-linear-gradient(315deg, #8490ff 0%, #62bdfc 74%);
 }
